New outputs and updating .gitignore

--- a/Bar_heat_maps.ipynb
+++ b/Bar_heat_maps.ipynb
@@ -429,7 +429,7 @@
     "    heat = sns.heatmap(pivoted, cmap='viridis', vmin=0, vmax=700, yticklabels=ylabels)\n",
     "    heat.set_title('Median Traffic for {} Station'.format(plain_station))\n",
     "    \n",
-    "    plt.savefig('data/Heatmap medians {}.png'.format(plain_station.replace(' ', '_')), dpi=300, transparent=True)\n"
+    "    plt.savefig('data/{}_heatmap.png'.format(plain_station.replace(' ', '_')), dpi=300, transparent=True)\n"
    ]
   },
   {
