minor changes to Bar_heat_maps.ipynb

--- a/Bar_heat_maps.ipynb
+++ b/Bar_heat_maps.ipynb
@@ -248,9 +248,7 @@
    "metadata": {},
    "source": [
     "#### Wrangling\n",
-    "compute total traffic (the sum of entries and exits)\n",
-    "aggregate values broken down by time and daily totals\n",
-    "aggregate median values for entries, exits, and total trafic by day of the week"
+    "Find Median values for hourly traffic over the whole data set and hourly traffic by day of the week"
    ]
   },
   {
@@ -259,16 +257,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_traffic = final_df[\"DIFF_ENTRIES\"] + final_df[\"DIFF_EXITS\"]\n",
-    "final_df['TOTAL_TRAF'] = total_traffic\n",
-    "\n",
     "station_median_data_hourly = final_df.groupby(['STATION','TIME']).agg({'DIFF_ENTRIES':'median',\n",
     "                                                                      'DIFF_EXITS':'median',\n",
-    "                                                                      'TOTAL_TRAF':'median'}).reset_index()\n",
+    "                                                                      'RIDERSHIP':'median'}).reset_index()\n",
     "\n",
     "station_median_data_daily_hourly = final_df.groupby(['STATION','TIME','DAY']).agg({'DIFF_ENTRIES':'median',\n",
     "                                                                                   'DIFF_EXITS':'median',\n",
-    "                                                                                   'TOTAL_TRAF':'median'}).reset_index()\n",
+    "                                                                                   'RIDERSHIP':'median'}).reset_index()\n",
     "\n"
    ]
   },
@@ -429,7 +424,7 @@
     "    heat_map_df = heat_map_df[heat_map_df['TIME'].map(lambda x: str(x).endswith('00:00'))]\n",
     "    heat_map_df['TIME'] = heat_map_df['TIME'].map(lambda x: str(x)[0:-3])\n",
     "        \n",
-    "    pivoted =  heat_map_df.pivot(index='DAY', columns='TIME', values='TOTAL_TRAF')\n",
+    "    pivoted =  heat_map_df.pivot(index='DAY', columns='TIME', values='RIDERSHIP')\n",
     "    \n",
     "    labels = list(heat_map_df['TIME'].unique())\n",
     "    labels = [labels[-1]] + labels\n",
