linking the outputs from both notebooks with final_df.pkl

--- a/bar_heat_maps.ipynb
+++ b/bar_heat_maps.ipynb
@@ -7,7 +7,7 @@
     "### Purpose\n",
     "This notebook creates bar chart and heatmaps of weekly patterns in daily ridership on the mta\n",
     "\n",
-    "The notenbook starts with the output from [01-mta-project1](01-mta-project1.ipynb)"
+    "The notenbook starts with the output from [MTA-project1](MTA-project1.ipynb)"
    ]
   },
   {
@@ -16,13 +16,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import copy\n",
+    "import pickle\n",
     "\n",
     "import pandas as pd\n",
-    "import pickle\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -70,16 +70,16 @@
        "      <th>TIME</th>\n",
        "      <th>DESC</th>\n",
        "      <th>...</th>\n",
-       "      <th>EXITS</th>\n",
-       "      <th>STATION_LINENAME</th>\n",
-       "      <th>DATETIME</th>\n",
-       "      <th>DIFF_HRS</th>\n",
-       "      <th>DIFF_ENTRIES</th>\n",
        "      <th>DIFF_EXITS</th>\n",
        "      <th>DAY</th>\n",
+       "      <th>RIDERSHIP</th>\n",
        "      <th>TIME_TIME</th>\n",
        "      <th>TIME_INT</th>\n",
-       "      <th>RIDERSHIP</th>\n",
+       "      <th>DIFF_HRS</th>\n",
+       "      <th>DIFF_HRS_ROUND</th>\n",
+       "      <th>TIME_ROUND</th>\n",
+       "      <th>DIFF_ENTRIES_PER_HR</th>\n",
+       "      <th>DIFF_EXITS_PER_HR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -96,16 +96,16 @@
        "      <td>05:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>...</td>\n",
-       "      <td>3509838</td>\n",
-       "      <td>(LIVONIA AV, L)</td>\n",
-       "      <td>2019-07-06 05:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>23.0</td>\n",
        "      <td>5</td>\n",
+       "      <td>25.0</td>\n",
        "      <td>05:00:00</td>\n",
        "      <td>5</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -120,16 +120,16 @@
        "      <td>09:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>...</td>\n",
-       "      <td>3509889</td>\n",
-       "      <td>(LIVONIA AV, L)</td>\n",
-       "      <td>2019-07-06 09:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>43.0</td>\n",
        "      <td>51.0</td>\n",
        "      <td>5</td>\n",
+       "      <td>94.0</td>\n",
        "      <td>09:00:00</td>\n",
        "      <td>9</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>10.75</td>\n",
+       "      <td>12.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -144,16 +144,16 @@
        "      <td>13:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>...</td>\n",
-       "      <td>3509949</td>\n",
-       "      <td>(LIVONIA AV, L)</td>\n",
-       "      <td>2019-07-06 13:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>53.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>5</td>\n",
+       "      <td>113.0</td>\n",
        "      <td>13:00:00</td>\n",
        "      <td>13</td>\n",
-       "      <td>113.0</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13:00:00</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -168,16 +168,16 @@
        "      <td>17:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>...</td>\n",
-       "      <td>3510012</td>\n",
-       "      <td>(LIVONIA AV, L)</td>\n",
-       "      <td>2019-07-06 17:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>65.0</td>\n",
        "      <td>63.0</td>\n",
        "      <td>5</td>\n",
+       "      <td>128.0</td>\n",
        "      <td>17:00:00</td>\n",
        "      <td>17</td>\n",
-       "      <td>128.0</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>16.25</td>\n",
+       "      <td>15.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -192,20 +192,20 @@
        "      <td>21:00:00</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>...</td>\n",
-       "      <td>3510056</td>\n",
-       "      <td>(LIVONIA AV, L)</td>\n",
-       "      <td>2019-07-06 21:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>30.0</td>\n",
        "      <td>44.0</td>\n",
        "      <td>5</td>\n",
+       "      <td>74.0</td>\n",
        "      <td>21:00:00</td>\n",
        "      <td>21</td>\n",
-       "      <td>74.0</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -216,21 +216,21 @@
        "4  35987  H038  R350  00-00-00  LIVONIA AV        L      BMT  07/06/2019   \n",
        "5  35988  H038  R350  00-00-00  LIVONIA AV        L      BMT  07/06/2019   \n",
        "\n",
-       "       TIME     DESC  ...    EXITS  STATION_LINENAME            DATETIME  \\\n",
-       "1  05:00:00  REGULAR  ...  3509838   (LIVONIA AV, L) 2019-07-06 05:00:00   \n",
-       "2  09:00:00  REGULAR  ...  3509889   (LIVONIA AV, L) 2019-07-06 09:00:00   \n",
-       "3  13:00:00  REGULAR  ...  3509949   (LIVONIA AV, L) 2019-07-06 13:00:00   \n",
-       "4  17:00:00  REGULAR  ...  3510012   (LIVONIA AV, L) 2019-07-06 17:00:00   \n",
-       "5  21:00:00  REGULAR  ...  3510056   (LIVONIA AV, L) 2019-07-06 21:00:00   \n",
+       "       TIME     DESC  ...  DIFF_EXITS  DAY RIDERSHIP TIME_TIME  TIME_INT  \\\n",
+       "1  05:00:00  REGULAR  ...        23.0    5      25.0  05:00:00         5   \n",
+       "2  09:00:00  REGULAR  ...        51.0    5      94.0  09:00:00         9   \n",
+       "3  13:00:00  REGULAR  ...        60.0    5     113.0  13:00:00        13   \n",
+       "4  17:00:00  REGULAR  ...        63.0    5     128.0  17:00:00        17   \n",
+       "5  21:00:00  REGULAR  ...        44.0    5      74.0  21:00:00        21   \n",
        "\n",
-       "  DIFF_HRS DIFF_ENTRIES  DIFF_EXITS  DAY  TIME_TIME TIME_INT  RIDERSHIP  \n",
-       "1 04:00:00          2.0        23.0    5   05:00:00        5       25.0  \n",
-       "2 04:00:00         43.0        51.0    5   09:00:00        9       94.0  \n",
-       "3 04:00:00         53.0        60.0    5   13:00:00       13      113.0  \n",
-       "4 04:00:00         65.0        63.0    5   17:00:00       17      128.0  \n",
-       "5 04:00:00         30.0        44.0    5   21:00:00       21       74.0  \n",
+       "   DIFF_HRS  DIFF_HRS_ROUND  TIME_ROUND DIFF_ENTRIES_PER_HR  DIFF_EXITS_PER_HR  \n",
+       "1  04:00:00               4    05:00:00                 0.5               5.75  \n",
+       "2  04:00:00               4    09:00:00               10.75              12.75  \n",
+       "3  04:00:00               4    13:00:00               13.25                 15  \n",
+       "4  04:00:00               4    17:00:00               16.25              15.75  \n",
+       "5  04:00:00               4    21:00:00                 7.5                 11  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
      "execution_count": 2,
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "final_df = pd.read_pickle('final_df.pkl')\n",
+    "final_df = pd.read_pickle('data/final_df.pkl')\n",
     "final_df.head()"
    ]
   },
