Changed the last markdown comment

--- a/MTA-project1.ipynb
+++ b/MTA-project1.ipynb
@@ -955,7 +955,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Except that there is a chance that the ridership on Wednesday in East Broadway station may have been a bit overestimated in our analysis, our conclusions on the choice of station, day, and time are less likely to be changed. Also, the overestimation of median is less than 20 people which could be considered as negligible considering that most riderships are well over 150 people."
+    "Except that there is a chance that the ridership on Wednesday in East Broadway station may have been a bit overestimated in our analysis, our conclusions on the choice of station, day, and time are less likely to be changed considering that most riderships are well over 150 people."
    ]
   },
   {
